# tree-sitter-norg4

./: .editorconfig  .gitignore  CONTRIBUTING.norg  Cargo.toml  README.norg  binding.gyp  grammar.js  package.json  pnpm-lock.yaml  todo.norg  tree-sitter-patch
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c  scanner.cc
test/corpus/: attached_modifier_extensions.txt  attached_modifiers.txt  escape_char.txt  free_form_attached_modifiers.txt  link_modifiers.txt  linkables.txt  paragraph.txt
test/corpus-failing/: attached_modfiers.txt
